Updated media queries

--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
   <title>Document</title>
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
 
 </head>
 <body>
 
   <nav class="navbar">
     <ul>
-      <li>
-        <a href="#">
-          <img src="white.png" alt="" height="50" width="50">
-        </a>
-      </li>
       <li> <a href="#"> Home </a></li>
       <li> <a href="#about"> About </a></li>
       <li> <a href="#pricing">Pricing</a> </li>
@@ -28,7 +24,7 @@
   </nav>
 
   <header>
-    <img src="white_2.png" alt="" height="200" width="200">
+    <img src="white_2.png">
     <h1>
       A workplace that is alive create ideas that live on
     </h1>
@@ -47,21 +43,21 @@
     <div class="newpricing">
       <div class="prices">
         <ul>
-          <li>Standard</li>
+          <h2>Standard</h2>
           <li> Watering not included</li>
           <li>No change of dead plants, monthly plant change</li>
         </ul>
       </div>
       <div class="prices">
         <ul>
-          <li>Premium</li>
+          <h2>Premium</h2>
           <li>Watering included</li>
           <li>Exchange of dead plants included, monthly plant change</li>
         </ul>
       </div>
       <div class="prices">
         <ul>
-          <li>Exclusive</li>
+          <h2>Exclusive</h2>
           <li>Web-controlled automated watering system included</li>
           <li>Change of dead plants included, weekly plant exchange</li>
           <li>Surveillence system for every plant. 24/7 support for emergencieSurveillence system for every plant. 24/7 support for emergencie Surveillence</li>
@@ -69,7 +65,6 @@
         </ul>
       </div>
     </div>
-  </section>
 
   <h2 id="themes"> Themes </h2>
 
@@ -92,6 +87,7 @@
       </p>
     </div>
   </section>
+</section>
 
   <footer class="wrapper">
     <div class="contact">
@@ -103,9 +99,9 @@
         Tel: 08-56 57 30 <br>
       </p>
       <div class="social">
-        <img src="facebookicon.png" alt="" height="50" width="50">
-        <img src="twittericon.png" alt="" height="50" width="50">
-        <img src="instagramicon.png" alt="" height="50" width="50">
+        <img src="facebookicon.png">
+        <img src="twittericon.png">
+        <img src="instagramicon.png">
       </div>
     </div>
 
@@ -120,7 +116,7 @@
         <label for="company"> Company </label>
         <input type="text" name="company" id="company">
         <label for="question"> Question </label>
-        <textarea cols="50" rows="20" id="question">
+        <textarea cols="40" rows="15" id="question">
         </textarea>
         <input type="submit" value="Send">
       </form>
